--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <div id="playerHealth" style="position: absolute; background: blue; top: 0; bottom: 0; right: 0; left: 0; width: 100%;"></div>
             </div>
             <!-- Timer -->
-            <div style="background-color: red; height: 100px; width: 100px; flex-shrink: 0;"></div>
+            <div id="timer" style="background-color: red; height: 100px; width: 100px; flex-shrink: 0; display: flex; align-items: center; justify-content: center;">10</div>
             <!-- Enemy Health -->
             <div style="position: relative; height: 30px; width: 100%;">
                 <div style="background-color: yellow; height: 30px;"></div>
@@ -22,6 +22,7 @@
             </div>
             <div></div>
         </div>
+        <div id="displayText" style="position: absolute; color: white; align-items: center; justify-content: center; top: 0; bottom: 0; left: 0; right:0; display: none">Tie</div>
         <canvas></canvas>
     </div>
     <script src="index.js"></script>
