--- a/index.html
+++ b/index.html
@@ -19,15 +19,21 @@
         <div id="health_bars" style="position: absolute; display:none; width: 100%; align-items: center; padding: 20px;">
             <!-- Player Health -->    
             <div id="player_health_bar" style="position: relative; width: 100%; display: none; justify-content: flex-end; border-top: 4px solid white; border-bottom: 4px solid white; border-left: 4px solid white;">
-                <div style="background-color: red; height: 30px; width: 100%;"></div>
-                <div id="playerHealth" style="position: absolute; background: #818CF9; top: 0; bottom: 0; right: 0; left: 0; width: 100%;"></div>
+                <div style="background-color: red; height: 40px; width: 100%;"></div>
+
+                <div id="playerHealth" style="position: absolute; background: #818CF9; top: 0; bottom: 0; right: 0; left: 0;  width: 100%;"></div>
+                <div id="playerMana" style="position: absolute; background: #292f68; top: 30; bottom: 0; right: 0; left: 0; height : 10px; width: 100%;"></div>
+                
+                <!-- <div style="background-color: blue; position: absolute; height: 30px; width: 100%;top: 30px;"></div> -->
             </div>
             <!-- Timer -->
-            <div id="timer" style="background-color: black; height: 50px; width: 80px; flex-shrink: 0; display: flex; align-items: center; justify-content: center; color: white;border: 4px solid white;">10</div>
+            <div id="timer" style="background-color: black; height: 60px; width: 80px; flex-shrink: 0; display: flex; align-items: center; justify-content: center; color: white;border: 4px solid white;">10</div>
             <!-- Enemy Health -->
             <div id="enemy_health_bar" style="position: relative; width: 100%; border-top: 4px solid white; border-bottom: 4px solid white; border-right: 4px solid white;">
-                <div style="background-color: red; height: 30px;width: 100%;"></div>
+                <div style="background-color: red; height: 40px;width: 100%;"></div>
                 <div id="enemyHealth" style="position: absolute; background: #818CF9; top: 0; bottom: 0; right: 0; left: 0"></div>
+                <div id="enemyMana" style="position: absolute; background: #292f68; top: 30; bottom: 0; right: 0; left: 0; width: 100%;"></div>
+
             </div>
         </div>
         <div id="displayText" style="position: absolute; color: white; align-items: center; justify-content: center; top: 0; bottom: 0; left: 0; right:0; display: none">Tie</div>
