adding score indicators, html-only

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
                 <div id="playerHealth" style="position: absolute; background: #818CF9; top: 0; bottom: 0; right: 0; left: 0;  width: 100%;"></div>
                 <div id="playerMana" style="position: absolute; background: #292f68; top: 30; bottom: 0; right: 0; left: 0; height : 10px; width: 100%;"></div>
                 <div id="playerName" style="position: absolute; top: 50; left: 0%;">P1</div>
+                <img id="playerScore1" src="./img/score_off.png" width="13" height="13" style="margin-left:2px; color: red;display:flex; position: relative; top: 50;">
+                <img id="playerScore2" src="./img/score_on.png" width="13" height="13" style="margin-left:2px; color: red;display:flex; position: relative; top: 50;">
                 
                 <!-- <div style="background-color: blue; position: absolute; height: 30px; width: 100%;top: 30px;"></div> -->
             </div>
@@ -35,6 +37,8 @@
                 <div id="enemyHealth" style="position: absolute; background: #818CF9; top: 0; bottom: 0; right: 0; left: 0"></div>
                 <div id="enemyMana" style="position: absolute; background: #292f68; top: 30; bottom: 0; right: 0; left: 0; width: 100%;"></div>
                 <div id="enemyName" style="position: absolute; top: 50; right: 0;">P2</div>
+                <img id="enemyScore2" src="./img/score_on.png" width="13" height="13" style="margin-left:2px; color: red;display:flex; position: relative; top: 50; right: 93%;">
+                <img id="enemyScore1" src="./img/score_off.png" width="13" height="13" style="margin-left:2px; color: red;display:flex; position: relative; top: 50; right: 93%;">
 
             </div>
         </div>
