--- a/index.html
+++ b/index.html
@@ -23,11 +23,10 @@
 
                 <div id="playerHealth" style="position: absolute; background: #818CF9; top: 0; bottom: 0; right: 0; left: 0;  width: 100%;"></div>
                 <div id="playerMana" style="position: absolute; background: #292f68; top: 30; bottom: 0; right: 0; left: 0; height : 10px; width: 100%;"></div>
-                <div id="playerName" style="position: absolute; top: 50; left: 0%;">P1</div>
-                <img id="playerScore1" src="./img/score_off.png" width="13" height="13" style="margin-left:2px; color: red;display:flex; position: relative; top: 50;">
-                <img id="playerScore2" src="./img/score_on.png" width="13" height="13" style="margin-left:2px; color: red;display:flex; position: relative; top: 50;">
+                <div id="playerName" style="position: absolute; top: 50; left: 0%;">•</div>
+                <div id="playerScore2" style="font-size: 25px; color:#440000; position: relative; top: 45; left: 0%;">•</div>
+                <div id="playerScore1" style="font-size: 25px; color:#ff0000; position: relative; top: 45; left: 0%;">•</div>
                 
-                <!-- <div style="background-color: blue; position: absolute; height: 30px; width: 100%;top: 30px;"></div> -->
             </div>
             <!-- Timer -->
             <div id="timer" style="background-color: black; height: 60px; width: 80px; flex-shrink: 0; display: flex; align-items: center; justify-content: center; color: white;border: 4px solid white;">10</div>
@@ -37,8 +36,8 @@
                 <div id="enemyHealth" style="position: absolute; background: #818CF9; top: 0; bottom: 0; right: 0; left: 0"></div>
                 <div id="enemyMana" style="position: absolute; background: #292f68; top: 30; bottom: 0; right: 0; left: 0; width: 100%;"></div>
                 <div id="enemyName" style="position: absolute; top: 50; right: 0;">P2</div>
-                <img id="enemyScore2" src="./img/score_on.png" width="13" height="13" style="margin-left:2px; color: red;display:flex; position: relative; top: 50; right: 93%;">
-                <img id="enemyScore1" src="./img/score_off.png" width="13" height="13" style="margin-left:2px; color: red;display:flex; position: relative; top: 50; right: 93%;">
+                <div id="enemyScore1" style="font-size: 25px; color:#ff0000; position: relative; top: 45; right: 89%;">•</div>
+                <div id="enemyScore2" style="font-size: 25px; color:#440000; position: relative; top: 45; right: 89%;">•</div>
 
             </div>
         </div>
@@ -49,6 +48,7 @@
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js" integrity="sha512-gmwBmiTVER57N3jYS3LinA9eb8aHrJua5iQD7yqYCKa5x6Jjc7VDVaEA0je0Lu0bP9j7tEjV3+1qUm6loO99Kw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="js/classes.js"></script>
+    <!-- <script src="js/backgrounds.js"></script> -->
     <script src="js/fighters.js"></script>
     <script src="js/utils.js"></script>
     <script src="index.js"></script>
