--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <div id="playerMana" style="position: absolute; background: #292f68; top: 30; bottom: 0; right: 0; left: 0; height : 10px; width: 100%;"></div>
                 <div id="playerName" style="position: absolute; top: 50; left: 0%;">•</div>
                 <div id="playerScore2" style="font-size: 25px; color:#440000; position: absolute; top: 45; right: 0%;">•</div>
-                <div id="playerScore1" style="font-size: 25px; color:#ff0000; position: absolute; top: 45; right: 5%;">•</div>
+                <div id="playerScore1" style="font-size: 25px; color:#440000; position: absolute; top: 45; right: 5%;">•</div>
                 
             </div>
             <!-- Timer -->
@@ -36,7 +36,7 @@
                 <div id="enemyHealth" style="position: absolute; background: #818CF9; top: 0; bottom: 0; right: 0; left: 0"></div>
                 <div id="enemyMana" style="position: absolute; background: #292f68; top: 30; bottom: 0; right: 0; left: 0; width: 100%;"></div>
                 <div id="enemyName" style="position: absolute; top: 50; right: 0;">P2</div>
-                <div id="enemyScore1" style="font-size: 25px; color:#ff0000; position: absolute; top: 45; right: 89%;">•</div>
+                <div id="enemyScore1" style="font-size: 25px; color:#440000; position: absolute; top: 45; right: 89%;">•</div>
                 <div id="enemyScore2" style="font-size: 25px; color:#440000; position: absolute; top: 45; right: 84%;">•</div>
 
             </div>
@@ -44,8 +44,8 @@
         <div id="displayText" style="position: absolute; color: white; align-items: center; justify-content: center; top: 0; bottom: 0; left: 0; right:0; display: none">Tie</div>
         <input id="sound_btn" type="button" style="display:none; position: absolute;bottom: 0; right: 0;" value="sound on" onclick="playMusic()" />
         <canvas></canvas>
-        <input id="start_btn" type="button" style="display:block; position: absolute; left: 42%; top: 480px;color: #ffab00; text-shadow: 2px 2px 0px #30263d; background-color: transparent; border-style: none;" value="press ENTER/SPACE to start" onclick="startGame()" disabled/>
-        <input id="info_btn" type="button" style="display:block; position: absolute; left: 42%; top: 510px;color: #ffab00; text-shadow: 2px 2px 0px #30263d; background-color: transparent; border-style: none;" value="Controls" onclick="startGame()" disabled/>
+        <input id="start_btn" type="button" style="display:none; position: absolute; left: 42%; top: 480px;color: #ffab00; text-shadow: 2px 2px 0px #30263d; background-color: transparent; border-style: none;" value="press ENTER/SPACE to start" onclick="startGame()" disabled/>
+        <input id="info_btn" type="button" style="display:none; position: absolute; left: 42%; top: 510px;color: #ffab00; text-shadow: 2px 2px 0px #30263d; background-color: transparent; border-style: none;" value="Controls" onclick="startGame()" disabled/>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js" integrity="sha512-gmwBmiTVER57N3jYS3LinA9eb8aHrJua5iQD7yqYCKa5x6Jjc7VDVaEA0je0Lu0bP9j7tEjV3+1qUm6loO99Kw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="js/classes.js"></script>
