--- a/index.html
+++ b/index.html
@@ -73,14 +73,13 @@
         <canvas style="border: 10px solid white"></canvas>
         <input id="start_btn" type="button" style="display:none; position: absolute; left: 42%; top: 480px;color: #ffab00; text-shadow: 2px 2px 0px #30263d; background-color: transparent; border-style: none;" value="press ENTER/SPACE to start" onclick="startGame()" disabled/>
         <input id="info_btn" type="button" style="display:none; position: absolute; left: 42%; top: 510px;color: #ffab00; text-shadow: 2px 2px 0px #30263d; background-color: transparent; border-style: none;" value="Controls" onclick="startGame()" disabled/>
-        <footer style="display: relative; align-items: center;">
+        <footer>
             <p class="copyright">&copy; Rage Of Elementals 2022, by <a href="https://github.com/ZikriBen/RageOfElementals-2d-fight" target="_blank" rel="external">Ben Zikri</a></p>
         </footer>
     </div>
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js" integrity="sha512-gmwBmiTVER57N3jYS3LinA9eb8aHrJua5iQD7yqYCKa5x6Jjc7VDVaEA0je0Lu0bP9j7tEjV3+1qUm6loO99Kw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="js/classes.js"></script>
-    <!-- <script src="js/backgrounds.js"></script> -->
     <script src="js/fighters.js"></script>
     <script src="js/utils.js"></script>
     <script src="index.js"></script>
