--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         footer {
             border-top: 1px solid #e6e6e6;
             display: block;
-            padding-top: 20px;
+            padding-top: 10px;
             margin: 20px auto;
             width: 400px;
             }
@@ -74,7 +74,7 @@
         <input id="start_btn" type="button" style="display:none; position: absolute; left: 42%; top: 480px;color: #ffab00; text-shadow: 2px 2px 0px #30263d; background-color: transparent; border-style: none;" value="press ENTER/SPACE to start" onclick="startGame()" disabled/>
         <input id="info_btn" type="button" style="display:none; position: absolute; left: 42%; top: 510px;color: #ffab00; text-shadow: 2px 2px 0px #30263d; background-color: transparent; border-style: none;" value="Controls" onclick="startGame()" disabled/>
         <footer>
-            <p class="copyright">&copy; Rage Of Elementals 2022, by <a href="https://github.com/ZikriBen/RageOfElementals-2d-fight" target="_blank" rel="external">Ben Zikri</a></p>
+            <p class="copyright">&copy; by <a href="https://www.linkedin.com/in/ben-zikri-a70633194/" target="_blank" rel="external">Ben Zikri</a> source code at <a href="https://github.com/ZikriBen/RageOfElementals-2d-fight" target="_blank" rel="external">GitHub</a>.</p>
         </footer>
     </div>
     
