new button for pvp or pve

--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
         <div id="displayText" style="position: absolute; color: white; align-items: center; justify-content: center; top: 0; bottom: 0; left: 0; right:0; display: none">Tie</div>
         <input id="sound_btn" type="button" style="display:none; position: absolute;bottom: 0; right: 0;" value="sound on" onclick="playMusic()" />
         <canvas style="border: 10px solid white"></canvas>
-        <input id="start_btn" type="button" style="display:none; position: absolute; left: 42%; top: 480px;color: #ffab00; text-shadow: 2px 2px 0px #30263d; background-color: transparent; border-style: none;" value="press ENTER/SPACE to start" onclick="startGame()" disabled/>
+        <input id="start_pve_btn" type="button" style="display:none; position: absolute; left: 42%; top: 450px;color: #ffab00; text-shadow: 2px 2px 0px #30263d; background-color: transparent; border-style: none;" value="press ENTER/SPACE to start" onclick="startGame()" disabled/>
+        <input id="start_pvp_btn" type="button" style="display:none; position: absolute; left: 42%; top: 480px;color: #ffab00; text-shadow: 2px 2px 0px #30263d; background-color: transparent; border-style: none;" value="press ENTER/SPACE to start" onclick="startGame()" disabled/>
         <input id="info_btn" type="button" style="display:none; position: absolute; left: 42%; top: 510px;color: #ffab00; text-shadow: 2px 2px 0px #30263d; background-color: transparent; border-style: none;" value="Controls" onclick="startGame()" disabled/>
         <footer>
             <p class="copyright">&copy; by <a href="https://www.linkedin.com/in/ben-zikri-a70633194/" target="_blank" rel="external">Ben Zikri</a> source code at <a href="https://github.com/ZikriBen/RageOfElementals-2d-fight" target="_blank" rel="external">GitHub</a>.</p>
@@ -80,6 +81,7 @@
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js" integrity="sha512-gmwBmiTVER57N3jYS3LinA9eb8aHrJua5iQD7yqYCKa5x6Jjc7VDVaEA0je0Lu0bP9j7tEjV3+1qUm6loO99Kw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="js/classes.js"></script>
+    <script src="js/screens.js"></script>
     <script src="js/fighters.js"></script>
     <script src="js/utils.js"></script>
     <script src="index.js"></script>
