adding new sound system, button and music actions

--- a/index.html
+++ b/index.html
@@ -69,11 +69,15 @@
             </div>
         </div>
         <div id="displayText" style="position: absolute; color: white; align-items: center; justify-content: center; top: 0; bottom: 0; left: 0; right:0; display: none">Tie</div>
-        <input id="sound_btn" type="button" style="display:none; position: absolute;bottom: 0; right: 0;" value="sound on" onclick="playMusic()" />
         <canvas style="border: 10px solid white"></canvas>
         <input id="start_pve_btn" type="button" style="display:none; position: absolute; left: 42%; top: 450px;color: #ffab00; text-shadow: 2px 2px 0px #30263d; background-color: transparent; border-style: none;" value="press ENTER/SPACE to start" onclick="startGame()" disabled/>
         <input id="start_pvp_btn" type="button" style="display:none; position: absolute; left: 42%; top: 480px;color: #ffab00; text-shadow: 2px 2px 0px #30263d; background-color: transparent; border-style: none;" value="press ENTER/SPACE to start" onclick="startGame()" disabled/>
         <input id="info_btn" type="button" style="display:none; position: absolute; left: 42%; top: 510px;color: #ffab00; text-shadow: 2px 2px 0px #30263d; background-color: transparent; border-style: none;" value="Controls" onclick="startGame()" disabled/>
+        <a href="#" onclick="toggleMusic()">
+            <svg id="soundSvg" style="width: 2.5%; height: 5%; position: absolute;bottom: 0; right: 0; color: white;">
+                <path id="svgPath" d="M13 2h-2v2H9v2H7v2H3v8h4v2h2v2h2v2h2V2zM9 18v-2H7v-2H5v-4h2V8h2V6h2v12H9zm10-6.777h-2v-2h-2v2h2v2h-2v2h2v-2h2v2h2v-2h-2v-2zm0 0h2v-2h-2v2z" fill="#ffab00"/>
+            </svg>
+          </a>
         <footer>
             <p class="copyright">&copy; by <a href="https://www.linkedin.com/in/ben-zikri-a70633194/" target="_blank" rel="external">Ben Zikri</a> source code at <a href="https://github.com/ZikriBen/RageOfElementals-2d-fight" target="_blank" rel="external">GitHub</a>.</p>
         </footer>
